--- a/src/pages/landingPage/landingPage.scss
+++ b/src/pages/landingPage/landingPage.scss
@@ -1,4 +1,5 @@
 @use "../../styles/animations.scss" as animations;
+@use "../../styles/mixins.scss" as mixins;
 @use "../../styles/variables.scss" as variables;
 
 #landing-page {
@@ -6,6 +7,56 @@
 
   #logo {
     opacity: 0.1;
-    @include animations.fade-in 
+    @include animations.fade-in(1.5s) 
+  }
+
+  .shift-up {
+    transform: translateY(-3.125rem);
+  }
+
+  .main-menu-container {
+    width: 32rem;
+    height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  }
+
+  .visible {
+    height: 20rem;
+    opacity: 1;
+  }
+
+  .widget-container {
+    transform: translateY(100vh);
+    animation-delay: 1.5s !important;
+    padding: 0 0.625rem;
+    @include mixins.border-with-red-texture;
+    @include animations.slide-up-bounce(0.5s);
+
+    &::before{
+      z-index: -1;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 1%;
+      width: 98%;
+      height: 100%;
+      @include mixins.background-with-red-texture;
+      mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    }
+  }
+
+  .standard-button-colors, .inverse-button-colors {
+    padding: 0.75rem 1.5rem;
+    width: 100%;
+    margin: 0.5rem 0;
+  }
+
+  @media (max-width: 31.25rem) {
+    .main-menu-container {
+      width: 100vw;
+    }
   }
 }
