--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,7 +1,9 @@
 @use "./variables.scss" as variables;
 
 
-@mixin fade-in($duration: 1.5s) {
+@mixin fade-in($duration: 1s, $timing: ease-in-out, $fill-mode: forwards) {
+  animation: fade-in $duration $timing $fill-mode;
+  
   @keyframes fade-in {
     0% {
       opacity: 0;
@@ -10,6 +12,96 @@
       opacity: 1;
     }
   }
+}
 
-  animation: fade-in $duration ease-in-out forwards;
+@mixin fade-out($duration: 1s, $timing: ease-in-out, $fill-mode: forwards) {
+  animation: fade-out $duration $timing $fill-mode;
+  
+  @keyframes fade-out {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+}
+
+@mixin float($duration: 1s, $timing: ease-in-out, $infinite: infinite, $alternate: alternate) {
+  animation: float $duration $timing $infinite $alternate;
+  
+  @keyframes float {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-0.3125rem);
+    }
+  }
+}
+
+@mixin slide-up-bounce($duration: 1s) {
+  animation: slide-up-bounce $duration ease-out forwards;
+
+  @keyframes slide-up-bounce {
+    0% {
+      transform: translateY(100vh);
+    }
+    80% {
+      transform: translateY(-1.25rem);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+}
+
+@mixin glitch-flicker($duration: 1s) {
+  animation: glitch-flicker 0.8s steps(2, start) infinite;
+  
+  @keyframes glitch-flicker {
+    0% {
+      transform: translate(0);
+      opacity: 1;
+    }
+  
+    20% {
+      transform: translate(-0.125rem, 0.125rem);
+    }
+  
+    40% {
+      transform: translate(0.125rem, -0.125rem);
+      opacity: 0.8;
+    }
+  
+    60% {
+      transform: translate(-0.125rem, -0.125rem);
+      opacity: 0.5;
+    }
+  
+    80% {
+      transform: translate(0.125rem, 0.125rem);
+      opacity: 0.7;
+    }
+  
+    100% {
+      transform: translate(0);
+      opacity: 1;
+    }
+  }
+}
+
+@mixin stack-animation {
+  animation: stack-animation 1s;
+
+  @keyframes stack-animation {
+    0% {
+      opacity: 0;
+      transform: translateX(4.6875rem);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
 }
