--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,6 +2,13 @@
 
 @mixin text-with-red-texture {
   color: transparent;
+  @include background-with-red-texture();
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+
+@mixin background-with-red-texture {
   background: repeating-linear-gradient(
     45deg,
     variables.$dark-blood-color,
@@ -9,6 +16,14 @@
     variables.$dark-blood-color 0.3125rem,
     variables.$light-blood-color 0.5625rem
   );
-  -webkit-background-clip: text;
-  background-clip: text;
+}
+
+@mixin border-with-red-texture {
+  border-image: repeating-linear-gradient(
+    45deg,
+    variables.$dark-blood-color,
+    variables.$light-blood-color 0.375rem,
+    variables.$dark-blood-color 0.3125rem,
+    variables.$light-blood-color 0.5625rem
+  ) 10;
 }
