--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,17 +9,50 @@
   );
 }
 
-.textured-red-border {
-  height: 0.625rem;
-  border-image: repeating-linear-gradient(
-    45deg,
-    variables.$dark-blood-color,
-    variables.$light-blood-color 0.375rem,
-    variables.$dark-blood-color 0.3125rem,
-    variables.$light-blood-color 0.5625rem
-  ) 10;
-}
-
 .grecaptcha-badge {
   visibility: hidden !important;
+}
+
+// Prevents highlighting except for text areas
+body {
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+// Allow selection in input fields
+input, textarea {
+  user-select: text !important;
+  touch-action: auto;
+  -webkit-user-drag: auto;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+}
+
+// Scrollbar
+::-webkit-scrollbar {
+  width: 0rem;
+  height: 0rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 0.25rem;
+
+  &:hover {
+    background-color: variables.$dark-blood-color;
+  }
+
+  &:active {
+    background-color: variables.$light-blood-color;
+  }
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
 }
