--- a/src/pages/landingPage/landingPage.scss
+++ b/src/pages/landingPage/landingPage.scss
@@ -48,7 +48,7 @@
     }
   }
 
-  .standard-button-colors, .inverse-button-colors {
+  .standard-button {
     padding: 0.75rem 1.5rem;
     width: 100%;
     margin: 0.5rem 0;
