--- a/src/components/headers/hoverText/hoverText.scss
+++ b/src/components/headers/hoverText/hoverText.scss
@@ -7,8 +7,8 @@
 }
 
 .hover-box {
-  top: 0;
-  left: 100%;
+  top: 100%;
+  left: 0;
   width: 11.25rem;
   background-color: rgba(0, 0, 0, 0.8);
   color: #FFF;
@@ -34,6 +34,17 @@
     font-size: 14px;
     margin: 0;
     line-height: 1.4;
+  }
+
+  .hover-effects {
+    margin-bottom: 1.5rem;
+  }
+
+  .hover-effect-description {
+    font-size: 0.875rem;
+    font-style: italic;
+    opacity: 0.8;
+    color: #facc15;
   }
 }
 
