--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,6 +1,6 @@
 @use "../../styles/animations.scss" as animations;
 @use "../../styles/variables.scss" as variables;
-@use "../../styles//mixins.scss" as mixins;
+@use "../../styles/mixins.scss" as mixins;
 
 #dashboard {
   transform: translateY(100vh);
@@ -14,6 +14,14 @@
       padding: 0.75rem 1rem;
     }
   }
+
+  #deck-editor {
+    .hover-box {
+      top: 0 !important;
+      left: 100% !important;
+    }
+  }
+
 
   main {
     height: 88vh;
@@ -54,6 +62,230 @@
     .standard-button, .disabled-button {
       padding: 0.75rem 1.5rem;
       margin: 0.5rem 0;
+    }
+  }
+
+  //Card Stat Text
+  .Total-text,
+  .Standard-text,
+  .Blessed-text, 
+  .Bloodstained-text, 
+  .Charred-text, 
+  .Exhumed-text, 
+  .Fleshwoven-text {
+    @include animations.float(3s)
+  }
+
+  .Blessed-text, 
+  .Bloodstained-text, 
+  .Charred-text, 
+  .Exhumed-text, 
+  .Fleshwoven-text { 
+    color: transparent;
+    font-size: 1.125rem;
+    font-weight: bold;
+    position: relative;
+  }
+
+  .Blessed-text {
+    background: repeating-linear-gradient(
+      45deg,
+      variables.$dark-gold-color,
+      variables.$light-gold-color 0.375rem,
+      variables.$dark-gold-color 0.3125rem,
+      variables.$light-gold-color 0.5625rem
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+  }
+
+  .Bloodstained-text {
+    background: repeating-linear-gradient(
+      45deg,
+      variables.$shadow-blood,
+      variables.$light-blood-color 0.375rem,
+      variables.$shadow-blood 0.3125rem,
+      variables.$light-blood-color 0.4375rem
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+  }
+
+  .Charred-text {
+    background: repeating-linear-gradient(
+      45deg,
+      variables.$ashen-gray,
+      variables.$ember-orange 0.375rem,
+      variables.$shadow-fire 0.3125rem,
+      variables.$ember-orange 0.5rem,
+      variables.$ashen-gray 00.4375rem
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+  }
+  
+  .Exhumed-text {
+    background: repeating-linear-gradient(
+      45deg,
+      #FFF,
+      variables.$eerie-green 0.375rem,
+      #FFF 0.3125rem,
+      variables.$eerie-green 0.5rem,
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+  }
+  
+  .Fleshwoven-text {
+    background: repeating-linear-gradient(
+      45deg,
+      variables.$skin-tone,
+      variables.$shadow-artery 0.375rem,
+      variables.$skin-tone 0.3125rem,
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+  }
+
+  .deck-type-container {
+    cursor: pointer;
+  }
+
+  .redacted {
+    height: 3.125rem;
+    columns: transparent;
+  }
+
+  .redacted-animation {
+    gap: 0.5rem;
+  }
+  
+  .question-mark {
+    font: 1.125rem;
+    font-weight: bold;
+    color: #CCC;
+    position: relative;
+    @include animations.float(5s);
+  }
+
+  .question-mark:nth-child(2) {
+    animation-delay: 2.5s;
+  }
+
+  .question-mark:nth-child(4) {
+    animation-delay: 2.5s;
+  }
+  //Deck Editor
+  
+  .deck-buttons-container {
+    z-index: 2;
+  }
+
+  .deck-buttons {
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 40%, rgba(0, 0, 0, 0) 70%);
+    backdrop-filter: blur(0.5rem);
+  }
+  .deck-message-container {
+    height: 3rem;
+    width: 100%;
+  }
+
+  .text-green-500.notification, .text-red-500.notification {
+    @include animations.fade-out(1.5s);
+    animation-delay: 3s;
+  }
+
+  .filter-checkbox-container {
+    padding-left: 1.5625rem;
+    margin-bottom: 0.75rem;
+    cursor: pointer;
+    font-size: 1.125rem;
+    color: variables.$light-gold-color;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    input {
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+    }
+  }
+
+  .filter-checkmark {
+    top: 0;
+    left: 0;
+    height: 1.25rem;
+    width: 1.25rem;
+    border: 0.125rem solid variables.$light-gold-color;
+  }
+
+  .filter-checkbox-container input:checked ~ .filter-checkmark {
+    background-color: variables.$light-blood-color;
+  }
+
+  .filter-checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+
+  .filter-checkbox-container input:checked ~ .filter-checkmark:after {
+    display: block;
+  }
+
+  .overlap-cards {
+    opacity: 0;
+    margin-left: -3.75rem;
+    transition: z-index 0.3s ease;
+    transform: translateX(3.125rem);
+    @include animations.stack-animation(0.05s);
+  
+    &:first-child {
+      margin-left: 0;
+    }
+  
+    &:hover {
+      z-index: 1;
+    } 
+  
+    &:active {
+      opacity: 1;
+  
+      .card {
+        opacity: 1;
+        cursor: grabbing;
+        transform: scale(1.05);
+      }
+    }
+  }
+  
+  .card-stack {
+    min-height: 19rem;
+    padding-right: 12rem;
+  }
+
+  .selected-card {
+    .hover-box {
+      display: none;
+    }
+
+    .card-inner {
+      transform: translateY(20px);
+      box-shadow: 0 0 10px variables.$light-gold-color;
+    }
+  }
+
+  
+  @media (max-width: 62.5rem) {
+    .card-stack {
+      min-height: 10.9375rem;
+    }
+
+    .overlap-cards {
+      margin-left: -1.5625rem;
     }
   }
 }
