--- a/src/components/menuComponents/buttons/buttons.scss
+++ b/src/components/menuComponents/buttons/buttons.scss
@@ -18,7 +18,7 @@
 }
 
 
-.inverse-button {
+.disabled-button {
   background: linear-gradient(45deg, variables.$light-gold-color, variables.$dark-gold-color);
 
   &:hover { 
